# crazyswarm_DATT

./: .gitignore  .gitmodules  README.md  sim_logslog.npz
crazyflie-firmware/: .gitignore  Makefile
crazyflie-firmware/src/modules/interface/: controller.h  controller_rwik.h
crazyflie-firmware/src/modules/src/: controller.c  controller_rwik.c
crazyflie-firmware/src/utils/interface/: physicalConstants.h
logs/: CF_functions.py  check.npz  delay_model.npy  delay_model.npz  latency.py  log.py  read_logfile.py  read_python_logs.py  read_python_logs_comb.py  read_python_logs_smooth.py
logs/CORL/: findstats.py  june_3_4.sh  june_7.sh  may_17.sh  op.txt  out.txt  output.txt  plt_utils.py  read_python_logs.py  run.sh  simVreal.py
logs/CORL/aug_09/real/: ppo_traj_L1_inside.npz  ppo_traj_L1_inside_neg.npz  ppo_traj_L1_neg.npz  rwik_ps.npz
logs/CORL/aug_09/sim/: log.npz  pid_naive.npz  pid_naive_pos.npz  ppo_L1.npz  ppo_L1_2.npz  ppo_L1_noise.npz  (+8 more)
logs/CORL/may_17/: rough.py
logs/march_11/: mppi_bc_randpoly_seed0.npz  mppi_bc_randpoly_seed1.npz  mppi_bc_randpoly_seed1_1.npz  mppi_bc_randpoly_seed3.npz  mppi_bc_randzz_x0.5_seed4.npz  mppi_bc_randzz_x0.5_seed5.npz  mppi_bc_randzz_x0.75_seed0.npz  mppi_bc_randzz_x0.75_seed0_1.npz  mppi_bc_randzz_x0.75_seed0_2.npz  mppi_bc_randzz_x0.75_seed1_1.npz  mppi_bc_randzz_x0.75_seed2_1.npz  mppi_bc_randzz_x0.75_seed3.npz  mppi_bc_randzz_x0.75_seed4.npz  mppi_bc_randzz_x0.75_seed5.npz  mppi_bc_randzz_x0.75_seed6.npz  mppi_bc_randzz_x0.75_seed6_1.npz  mppi_bc_randzz_x1.0_seed0.npz  mppi_bc_randzz_x1.0_seed1_1.npz  mppi_bc_randzz_x1.0_seed2_1.npz  mppi_bc_randzz_x1.0_seed3.npz  mppi_bc_randzz_x1.0_seed4.npz  mppi_bc_randzz_x1.0_seed5.npz  mppi_randomzz_x0.5_seed0_2.npz  mppi_randomzz_x1.0_seed0.npz  mppi_randomzz_x1.0_seed0_1.npz  ppo_base_randzz_x1.0_seed1.npz  ppo_base_randzz_x1.0_seed2.npz  ppo_base_randzz_x1.0_seed5.npz  rwik_test_ppo_rand_poly_seed0.npz  rwik_test_ppo_rand_poly_seed3.npz  rwik_test_ppo_x1.0_seed2_1.npz  rwik_test_ppo_x1.0_seed3.npz  rwik_test_ppo_x1.0_seed4.npz  tests.txt
logs/old_logs/: log.npz  log.py  log1.npz  log_03_02_01  log_03_02_03  log_03_02_04.npz  log_03_02_05  log_03_02_06  log_03_02_06.npz  log_04_02_09.npz  log_09_02_00  log_09_02_00.npz  log_09_02_01  log_09_02_01.npz  log_09_02_02  log_09_02_02.npz  log_09_02_03  log_09_02_03.npz  log_09_02_04  log_09_02_04.npz  log_09_02_05.npz  log_09_02_06.npz  log_09_02_07.npz  log_09_02_10  log_09_02_10.npz  log_09_02_22  log_09_02_22.npz  log_09_02_23  log_09_02_23.npz  log_09_02_24  log_09_02_24.npz  log_09_02_29  log_09_02_29.npz  log_10_02_02  log_10_02_02.npz  log_10_02_03  log_10_02_05  log_10_02_05.npz  log_10_02_06  log_10_02_07  (+244 more)
ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
ros_ws/devel/lib/: libvrpn.so.0
ros_ws/src/crazyflie_tools/: .gitmodules  .travis.yml  CMake.cmake  README.md  ROS.cmake
ros_ws/src/crazyswarm/externalDependencies/libmotioncapture/: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  setup.py  version
ros_ws/src/crazyswarm/externalDependencies/libmotioncapture/.github/workflows/: CI.yml  publish.yaml
ros_ws/src/crazyswarm/externalDependencies/libmotioncapture/examples/: main.cpp  python.py
ros_ws/src/crazyswarm/externalDependencies/libmotioncapture/include/libmotioncapture/: motioncapture.h  optitrack.h  optitrack_closed_source.h  qualisys.h  testmocap.h  vicon.h  vrpn.h
ros_ws/src/crazyswarm/externalDependencies/libmotioncapture/src/: motioncapture.cpp  optitrack.cpp  optitrack_closed_source.cpp  python_bindings.cpp  qualisys.cpp  testmocap.cpp  vicon.cpp  vrpn.cpp
sim_logs/: corl-rl_2d__zz_xy_seed1_0.npz  corl-rl_3d__zz_xy_seed1_1.npz  corl-rl_3d__zz_xyz_seed1_0.npz  corl-rl_xy_2o__zz_xy_seed0_0.npz  corl-rla_mass_wind_pseudo_2d__zz_xy_seed0_0.npz  corl-rla_mass_wind_pseudo_2d__zz_xy_seed1_0.npz  corl-rla_pseudo-xy__chpoly_xy_seed2_0.npz  corl-rla_pseudo-xy__zz_x_seed0_0.npz  corl-rla_pseudo-xy__zz_xy_seed0_0.npz  corl-rla_wind__zz_x_seed0_0.npz  log.npz  log123.npz  ppo-mppi-x__zz_x_seed1.npz  ppo-mppi-xy__chpoly_xy_seed1.npz  ppo-mppi-xy__chpoly_xy_seed2.npz  ppo-mppi-xy__zz_x_seed1.npz  ppo-mppi-xy__zz_xy_seed2.npz  ppo-rl-x__zz_x_seed0.npz  ppo-rl-x__zz_x_seed2.npz  ppo-rl-xy__zz_xy_seed0.npz  read_python_logs.py  xyz.npz
(+943 files in other folders)
